# natsukashii

./: Cargo.toml  build.rs
res/shaders/: demo.frag  demo.vert  forward.frag  forward.vert  fullscreen.vert
src/: camera.rs  engine.rs  geometry.rs  gfx.rs  input.rs  main.rs  mesh.rs  model.rs  renderer.rs  scene.rs  shader.rs  uniform.rs
