[package]
name = "natsukashii"
version = "0.1.0"
authors = ["Agorgianitis Loukas <agorglouk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.15"
log = "0.4.14"
wgpu = "0.9.0"
winit = "0.25.0"
