[package]
name = "natsukashii"
version = "0.1.0"
authors = ["Agorgianitis Loukas <agorglouk@gmail.com>"]
edition = "2018"

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive", "extern_crate_alloc"] }
env_logger = "0.9.0"
futures = "0.3.15"
genmesh = "0.6.2"
glam = { version = "0.17.3", features = ["bytemuck", "mint"] }
log = "0.4.14"
obj = { version = "0.10.2", features = ["genmesh"] }
rand = "0.8.4"
wgpu = "0.9.0"
winit = "0.25.0"

[build-dependencies]
glob = "0.3"
shaderc = "0.7.2"
