[package]
name = "natsukashii"
version = "0.1.0"
authors = ["Agorgianitis Loukas <agorglouk@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive", "extern_crate_alloc"] }
env_logger = "0.9.0"
futures = "0.3.17"
genmesh = "0.6.2"
glam = { version = "0.19", features = ["bytemuck", "mint"] }
log = "0.4.14"
rand = "0.8.4"
tobj = "3.2.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
winit = "0.25.0"

[build-dependencies]
glob = "0.3"
shaderc = "0.7.3"
